--- a/app/src/main/res/layout/fragment_pocket_video.xml
+++ b/app/src/main/res/layout/fragment_pocket_video.xml
@@ -67,7 +67,7 @@
 
     <ImageView
         android:id="@+id/pocketHelpButton"
-        tools:ignore="ContentDescription"
+        android:contentDescription="@string/pocket_home_tutorial_description"
         android:layout_marginStart="830dp"
         android:focusable="true"
         style="@style/NavigationButton"
