--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,8 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<FrameLayout
+<merge
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/container_parent"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
@@ -31,4 +30,4 @@
             android:id="@+id/container_settings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-</FrameLayout>
+</merge>
