Issue #1619: Pull brand name out of exit button string

--- a/app/src/main/res/layout/browser_overlay_top_nav.xml
+++ b/app/src/main/res/layout/browser_overlay_top_nav.xml
@@ -52,7 +52,7 @@
         android:id="@+id/exitButton"
         style="@style/NavigationButton"
         android:src="@drawable/ic_home"
-        android:contentDescription="@string/exit_firefox_a11y"/>
+        android:contentDescription="@null"/>
 
     <!-- Image src set in code to fix SVG. -->
     <ImageButton
